tests/generics/generic_vec_test.diag
generic_vec_test.ax:12:18: error: type mismatch: cannot compare 0 and 4
generic_vec_test.ax:13:29: error: type mismatch: expected compatible types, found 0 and 4
generic_vec_test.ax:15:19: error: type mismatch: cannot compare 0 and 31
generic_vec_test.ax:16:67: error: type mismatch: expected compatible types, found 0 and 4
generic_vec_test.ax:21:19: error: type mismatch: expected compatible types, found 0 and 4
generic_vec_test.ax:26:17: error: type mismatch: expected 24, found 3
generic_vec_test.ax:27:17: error: type mismatch: expected 24, found 3
generic_vec_test.ax:28:17: error: type mismatch: expected 24, found 3
generic_vec_test.ax:35:15: error: type mismatch: cannot compare 0 and 33
